--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cart.js": "^0.0.0",
     "daisyui": "^4.12.13",
     "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
