--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "chart.js": "^4.4.5",
     "daisyui": "^4.12.13",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "next": "15.0.0",
     "react": "^18.3.1",
