--- a/front-end/package.json
+++ b/front-end/package.json
@@ -20,6 +20,7 @@
     "react-toastify": "^10.0.6",
     "toast": "^0.5.4",
     "toastify": "^2.0.1",
+    "vercel": "^39.2.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
